# A build system is required to convert your code into a distributable package.
# setuptools is the oldest and most common build tool, but we also like Poetry
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bluebikesdashboard"
version = "0.0.1"
description = "A Dash application to analyze Bluebikes trips."
readme = "README.md"

# What version of python does your library work with?
requires-python = ">=3.10"

# Metadata about your package in case you upload it to PYPI
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# All the dependencies needed for running your module go here
dependencies = [
    "dash",
    "pandas",
    "plotly",
]

[project.optional-dependencies]
# Extra dependencies only needed for running tests go here
test = ["pytest"]

# Dependencies that are useful only to developers, like an autoformatter and
# support for visualizations in jupyter notebooks go here
dev = [
    "ruff",
    "jupyter",
    "matplotlib",
    "seaborn",
    "sphinx",
]

# Add customizations to the Ruff linter as described on https://docs.astral.sh/ruff/configuration/
[tool.ruff]
# Override ruff's default so that lines aren't more than 120 characters
line-length = 119
