[tool.poetry]
name = "bluebikesdashboard"
version = "0.1.0"
description = "A Dash application to analyze Bluebikes trips."
authors = ["Virginia Partridge <vcpartridge@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
plotly = "^5.24.1"
pandas = "^2.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.2"
jupyter = "^1.1.1"
networkx = "^3.4.2"
osmnx = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Add customizations to the Ruff linter as described on https://docs.astral.sh/ruff/configuration/
[tool.ruff]
# Override ruff's default so that lines aren't more than 120 characters
line-length = 119